--- a/config.toml
+++ b/config.toml
@@ -109,7 +109,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
       logo = ""
       # title name
       
-      name = "LoveIt"
+      name = "DFIR with Noob"
       # you can add extra information before the name (HTML format is supported), such as icons
       
       pre = "<i class='far fa-kiss-wink-heart fa-fw' aria-hidden='true'></i>"
