--- a/config.toml
+++ b/config.toml
@@ -245,7 +245,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
       title = ""
       # subtitle shown in home page (HTML format is supported)
       
-      subtitle = "LMAO OK"
+      subtitle = "Defend Smarter, Not Harder"
       # whether to use typeit animation for subtitle
       
       typeit = true
@@ -371,16 +371,16 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
       Whatsapp = false
       Pinterest = false
       Tumblr = false
-      HackerNews = true
+      HackerNews = false
       Reddit = false
       VK = false
       Buffer = false
       Xing = false
-      Line = true
+      Line = false
       Instapaper = false
       Pocket = false
       Flipboard = false
-      Weibo = true
+      Weibo = false
       Blogger = false
       Baidu = false
       Odnoklassniki = false
@@ -769,7 +769,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
           gravatarEmail = ""
           avatarURL = "/images/avatar.png"
           title = ""
-          subtitle = "LMAO OK"
+          subtitle = "Defend Smarter, Not Harder"
           typeit = true
           social = true
           disclaimer = ""
