--- a/config.toml
+++ b/config.toml
@@ -81,7 +81,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
   title = "DFIR with Noob"
   
   # website description for RSS, SEO, Open Graph and Twitter Cards
-  description = "Hugo theme - LoveIt"
+  description = "Kill your time with this"
   
   # website images for Open Graph and Twitter Cards
   images = ["/logo.png"]
